--- a/VocabularioAleman/.project
+++ b/VocabularioAleman/.project
@@ -14,4 +14,11 @@
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>src/Reverso.TXT</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/OneDrive/Escritorio/SoloQ%20Challenge/Reverso.TXT</locationURI>
+		</link>
+	</linkedResources>
 </projectDescription>
